--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,6 +1,17 @@
 {
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/api/*"]
+  },
   "routes": [
-    { "route": "/api/*", "allowedRoles": ["anonymous"] },
-    { "route": "/*",     "serve": "/index.html", "statusCode": 200 }
-  ]
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous","authenticated"]
+    }
+  ],
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/index.html"
+    }
+  }
 }
