--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
     "gh-pages": "^6.3.0",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "homepage": "https://Nicole5TEA.github.io/actum"
 }
